--- a/trino/coordinator/etc/config.properties
+++ b/trino/coordinator/etc/config.properties
@@ -1,7 +1,8 @@
 coordinator=true
 node-scheduler.include-coordinator=false
 http-server.http.port=8080
-query.max-memory=20GB
-query.max-memory-per-node=3GB
-query.max-total-memory-per-node=4GB
+query.max-memory=10GB
+query.max-memory-per-node=4.75GB
+query.max-total-memory-per-node=5GB
+memory.heap-headroom-per-node=0.25GB
 discovery.uri=http://trino-coordinator:8080
